tests/NormalTests/paczka1/small_fuzzy/50690716.err
Error in line 5: qfSrwxPQ2U S643 94,26
Error in line 3: fW02kWscCse A298 37,4
Error in line 8: FYgl4YSV S643 73,4
